--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,10 @@ hr {
 #board {
     width: 400px;
     height: 400px;
-/*    background-color: var(--main_bg);
-    border: 6px solid var(--tile_bg);*/
-    background-color: #effaff;
-	border: 6px solid #b7dff2;
+    background-color: var(--main_bg);
+    border: 6px solid var(--tile_bg);
+/*    background-color: #effaff;
+	border: 6px solid #b7dff2;*/
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -117,8 +117,8 @@ hr {
     position: relative;
     width: 90px;
     height: 90px;
-/*    border: 5px solid var(--tile_bg);*/
-    border: 5px solid #b7dff2;
+    border: 5px solid var(--tile_bg);
+/*    border: 5px solid #b7dff2;*/
     font-size: 25px;
     font-weight: bold;
     display: flex;
@@ -127,130 +127,130 @@ hr {
 }
 
 .x2 {
-/*    background-color: var(--x2);*/
-	background-image: var(--background-image-url-02);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_1);*/
-		color: var(--transparent);
+    background-color: var(--x2);
+/*	background-image: var(--background-image-url-02);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_1);
+/*		color: var(--transparent);*/
 }
 
 
 .x4 {
-/*    background-color: var(--x4);*/
+    background-color: var(--x4);
 
-	background-image: var(--background-image-url-04);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_1);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-04);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_1);
+/*		color: var(--transparent);*/
 }
 
 
 .x8 {
-/*    background-color: var(--x8);*/
+    background-color: var(--x8);
 
-	background-image: var(--background-image-url-08);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-08);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 .x16 {
-/*    background-color: var(--x16);*/
-
+    background-color: var(--x16);
+/*
 	background-image: var(--background-image-url-16);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 .x32 {
-/*    background-color: var(--x32);*/
+    background-color: var(--x32);
 
-	background-image: var(--background-image-url-32);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-32);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 .x64 {
-/*    background-color: var(--x64);*/
-
+    background-color: var(--x64);
+/*
 	background-image: var(--background-image-url-64);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 .x128 {
-/*    background-color: var(--x128);*/
+    background-color: var(--x128);
 
-	background-image: var(--background-image-url-128);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-128);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 .x256 {
-/*    background-color: var(--x256);*/
+    background-color: var(--x256);
 
-	background-image: var(--background-image-url-256);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-256);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 .x512 {
-/*    background-color: var(--x512);*/
+    background-color: var(--x512);
 
-	background-image: var(--background-image-url-512);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-512);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 
 .x1024 {
-/*    background-color: var(--x1024);*/
+    background-color: var(--x1024);
 
-	background-image: var(--background-image-url-1024);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-1024);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
 
 .x2048 {
-/*    background-color: var(--x2048);*/
+    background-color: var(--x2048);
 
-	background-image: var(--background-image-url-2048);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-2048);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 .x4096 {
-/*    background-color: var(--x4096);*/
+    background-color: var(--x4096);
 
-	background-image: var(--background-image-url-4096);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-4096);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 .x8192 {
-/*    background-color: var(--x8192);*/
+    background-color: var(--x8192);
 
-	background-image: var(--background-image-url-8192);
-	background-size: 100% 100%;
-/*    color: var(--tile_text_2);*/
-		color: var(--transparent);
+/*	background-image: var(--background-image-url-8192);
+	background-size: 100% 100%;*/
+    color: var(--tile_text_2);
+/*		color: var(--transparent);*/
 }
 
 
